changed counter and index

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 <h1>Hello, world!</h1>
 
-Welcome!!!!!.
+Welcome!!!.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<Counter IncrementAmount="10" />
